--- a/config_odoo/odoo.conf
+++ b/config_odoo/odoo.conf
@@ -1,4 +1,10 @@
 [options]
 addons_path=/usr/lib/python3/dist-packages/odoo/addons,/mnt/extra-addons,/var/lib/odoo/.local/share/Odoo/addons/17.0
 admin_passwd = $pbkdf2-sha512$600000$ozRmLAVAaM05ZwyBkHKOsQ$bo4sy.MJpH.teB/em6iVBioiJEF.f5CUKhliQsLUksGH6jt54Mldtf5bk.eTxoAnuayfPTDoJqumb0zy/ZGvIg
+# logs
+log_db = False
+log_db_level = warning
+log_handler = :INFO
+log_level = info
+logfile = /var/log/odoo/odoo-server.log
 
